# glove80-config

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  ROADMAP.md  STATE-2026-07-19.md  flake.nix  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: build.yml  check.yml
config/: default.nix  firmware.toml  glove80.conf  glove80.keymap  glove80.toml  moergo-layout.json
docs/: design-goals.md  desired-system.md  host-lighting-protocol.md  implementation-plan.md  lighting-design.md  qualification.md  rmk-agent-attention.md  rmk-evaluation.md  runtime-configuration-plan.md  rynk-migration.md  upstream-alignment.md  vial-ble-investigation.md
docs/upstream/: BUG-rmk-dfu-hash.md  BUG-trouble-host.md  FINAL-REVIEW.md  ISSUE-dfu-hash.md  PATCHES.md  PR-READINESS.md  PR-host-transport-hooks.md  PR-keymap-ops.md  PR-shared-flash.md  PR-split-app-messages.md  RENAME-MAP.md  RMK-UPSTREAMING-PROPOSAL.md  SUMMARY.md
examples/: claude-hooks.json
host-lighting/: Kconfig
host-lighting/src/: host_lighting_subsystem.c
nix/: moergo-zmk-studio-modules.patch
protocol/glove80-host-protocol/: PROTOCOL.md  rust-toolchain.toml
protocol/vectors/: host-protocol-v1.1.json  host-protocol-v1.2.json  host-protocol-v1.3.json  host-protocol-v1.4.json  host-protocol-v1.json
rmk/glove80/: Cargo.toml  README.md  build.rs  build.sh  keyboard.toml
scripts/: elf-to-uf2.mjs  generate-keymap.mjs
src/: attention.rs  claude.rs  codex.rs  events.rs  main.rs  rmk.rs
ui/: README.md  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  (+1 more)
(+86 files in other folders)
